--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "express-http-context": "^1.2.4",
     "next": "12.0.7",
+    "pino": "^7.5.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
+    "@types/uuid": "^8.3.3",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "prettier": "^2.5.1",
     "typescript": "4.5.4"
   }
 }
