--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express-http-context": "^1.2.4",
     "next": "12.0.7",
+    "next-connect": "^0.11.0",
     "pino": "^7.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
